log/build_2021-06-01_18-53-22/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform1_plugin.cpp: In member function ‘virtual void gazebo_plugin_sim::Platform1Plugin::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform1_plugin.cpp:158:15: error: ‘class gazebo_plugin_sim::Platform1PluginPrivate’ has no member named ‘sim_vel_M_’; did you mean ‘vel_M_’?
  158 |        impl_->sim_vel_M_ = impl_->ros_node_->create_publisher<interfaces::msg::MotorVels>(
      |               ^~~~~~~~~~
      |               vel_M_
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform1_plugin.dir/build.make:63: CMakeFiles/platform1_plugin.dir/src/platform1_plugin.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/platform1_plugin.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
